--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,13 @@
 /* Main Stylesheet Import Hub */
 
 /* Base Styles */
-@import 'base/_variables.css';
-@import 'base/_reset.css';
+@import 'base/variables.css';
+@import 'base/reset.css';
 
 /* Component Styles */
-@import 'components/_animations.css';
-@import 'components/_navbar.css';
-@import 'components/_hero.css';
-@import 'components/_buttons.css';
-@import 'components/_cards.css';
-@import 'components/_footer.css';
+@import 'components/animations.css';
+@import 'components/navbar.css';
+@import 'components/hero.css';
+@import 'components/buttons.css';
+@import 'components/cards.css';
+@import 'components/footer.css';
